8230350: Shenandoah: Assertion failed when GC is cancelled by a worker thread

Reviewed-by: rkennke